styles.css
body{
  font-family: 'Nunito Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
  padding: 0;
  margin: 0;
}
a {
  text-decoration: none;
}
.banner.home {
  min-height: 400px;
  background-image: url(img/Nanny-children-grass.jpg);
  background-repeat: no-repeat;
  background-size: 100% auto;
  background-position: top center;
  padding: 16px;
  position: relative;
}
.banner.about {
  background-color: #cbbae3;
  padding: 16px;
  position: relative;
}

.header {
  white-space: nowrap;
}
.header h1 {display: none;}

.logo  {
  width: 260px;
  max-width: 260px;
  vertical-align: middle;
}

.header div {display: inline;}
.nav-link a{
  padding: 0px 8px 18px 8px;
  font-size: 13px;
  text-transform: uppercase;
  text-decoration: none;
  letter-spacing: 2px;
  font-weight: 600;
  line-height: 1em;
  color: rgba(255, 255, 255, .9);
}


.description {
  margin:0;
  padding: 20px auto;
  display: block;
  font-weight: 600;
  font-size: 60px;
  letter-spacing: 0px;
  text-transform: uppercase;
  letter-spacing: 4px;
  color: #fff;
  text-align: center;
  word-spacing: 12px;
}
.content {
  text-align: center;
}
.content div {
  padding: 10px;
}
blockquote {
  background-color: #eeeeee;
  padding: 10px;
  text-align: left;
  font-weight: 300;
  font-style: italic;
}
.tradename {
font-weight: 600;
font-size: larger;
padding: 0;
}
.closed {
font-size: 35px;
  line-height: 1.5em;
  letter-spacing: 1px;
  font-weight: 300;
  font-style: italic;
  color: #fff;
  margin: 30px ;
  word-spacing: normal;
}
.content {
  padding: 20px;
}

.nannyAlex {
  float: right;
  padding: 10px;
  text-align: center;
}
.services{
  background-color: #333;
  padding: 20px;
}
.services h3,
.services h2{
  font-weight: 300;
  text-transform: uppercase;
  color: #fff;
  text-align: center;
}
.sociallist {
  text-align: center;
}
.sociallist a {
    display: inline-block;
    margin: 0 20px;
    width: 36px;
    height: 36px;
}
.icon {
  width: 36px;
    height: 36px;
    border-radius: 50%;
    background-color: white;

}

footer {
  background-color: #000;
  color: #fff;
  font-weight: 200;
  text-align: center;
padding: 8px;
}
footer div{
padding: 8px;
}
footer div a {
  color: #fff;
  display: inline-block;
padding: 8px;
text-decoration: underline;
}

@media only screen and (max-width: 640px) {
  .banner.home {
      min-height: 250px;
    }
  .description { 
    font-size: 28px;

  }
    .closed {font-size: 18px;}
}

